Fix: social icons from growing to fit the entire width of the flex container, which was particularly strange looking when only a few icons were present. Instead, justify them center and add a row/col gap.

--- a/assets/scss/components/_socials.scss
+++ b/assets/scss/components/_socials.scss
@@ -7,7 +7,8 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 15px 40px;
   list-style: none;
   padding: 0;
   margin: 0;
